fixed spacing issue

--- a/index.css
+++ b/index.css
@@ -129,18 +129,18 @@ p {
 @media (max-width: 576px) {
     
     nav {
-        margin-bottom: 40px;
+        margin-bottom:30px;
     }
 
-    .bounce {
-        height: 5px;
-        font-size: 25px;
+    header {
+        padding: 0px;
+        margin-top: 50px
     }
-
     .intro {
         line-height: 120%;
-        margin-left: 0%;
+        margin-left: 5%;
         margin-right: 0%;
+        border: 5px solid red;
     }
     
     .first {
@@ -175,7 +175,7 @@ p {
         width: 100%;
         text-align: center;
         font-size: 35px;
-        margin-bottom: 20px;
+        margin-bottom: 0px;
     }
 
     a {
